# csopesy-fcfs

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  config.txt
docs/: references.md  specs.md
docs/superpowers/specs/: 2026-06-16-fcfs-scheduler-design.md
include/: Config.h  Console.h  PrintLogger.h  Process.h  Scheduler.h  TimeUtil.h
src/: Config.cpp  Console.cpp  PrintLogger.cpp  Process.cpp  Scheduler.cpp  TimeUtil.cpp  main.cpp
